Screens: fix overflow

--- a/src/components/common/Screens/style.scss
+++ b/src/components/common/Screens/style.scss
@@ -2,6 +2,7 @@
 
 .ptr-screens {
 	@include positionFill;
+	overflow: hidden;
 	display: flex;
 }
 .ptr-screen {
